@@ -201,6 +201,8 @@ $labels['htmlsignature'] = 'Podpis w HTML';
 $labels['previewpane'] = 'Pokaż podgląd';
 $labels['logoutclear'] = 'Przy wylogowaniu opróżnij Kosz';
 $labels['logoutcompact'] = 'Przy wylogowaniu porządkuj folder Odebrane';
+$labels['uisettings'] = 'Interfejs użytkownika';
+$labels['serversettings'] = 'Ustawienia serwera';
 $labels['autosavedraft'] = 'Automatyczny zapis tworzonej wiadomości';
 $labels['everynminutes'] = 'co $n minut';
 $labels['never'] = 'nigdy';
